--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "reactproject",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "module","homepage": "https://github.com/Pratham33210/reactproject"
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview","predeploy":"npm run build",
+"deploy":"gh -pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
